# textify

./: .env.example  .gitignore  DEPLOY_INSTRUCTIONS.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.vercel/: project.json
docker/: Dockerfile  docker-compose.swarm.yml  docker-compose.yml  nginx.conf
docs/: CONTRIBUTING.md  PROJECT_STRUCTURE.md
scripts/: build.ps1  build.sh  deploy-to-github.bat  deploy-to-github.ps1  setup.sh
src/: __init__.py  file_converter.py  html_to_docx_universal.py  main.py
tests/: __init__.py  test_converter.py
